--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=khaibut
 server.port=${PORT:8080}
 
 # Database: Railway MySQL (MYSQL_*) hoặc local/docker-compose
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/mydatabase}
-spring.datasource.username=${MYSQLUSER:myuser}
-spring.datasource.password=${MYSQLPASSWORD:secret}
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
